<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.app.androidinitialproject.ui.changepassword.ChangePasswordViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWindowBackground"
        android:clickable="true"
        android:focusable="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.NoActionBar.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:contentInsetStart="0dp"
                android:contentInsetLeft="0dp"
                android:contentInsetEnd="0dp"
                android:contentInsetRight="0dp"
                app:contentInsetEnd="0dp"
                app:contentInsetLeft="0dp"
                app:contentInsetRight="0dp"
                app:contentInsetStart="0dp"
                app:popupTheme="@style/AppTheme.NoActionBar.PopupOverlay">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/toolbarTitle"
                    style="@style/AppTheme.TextToolbarTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_password" />
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/old_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:hint="@string/old_password"
                        android:paddingStart="0dp"
                        android:paddingLeft="0dp"
                        app:layout_constraintBottom_toTopOf="@+id/new_password"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/colorTextBlack">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_old_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionGo"
                            android:inputType="textPassword"
                            android:paddingStart="0dp"
                            android:paddingLeft="0dp"
                            android:paddingTop="12dp"
                            android:text="@={viewmodel.currentPassword}"
                            tools:text="123456" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/new_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:hint="@string/new_password"
                        android:paddingStart="0dp"
                        android:paddingLeft="0dp"
                        app:layout_constraintBottom_toTopOf="@+id/confirm_password"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/old_password"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/colorTextBlack">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_new_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionGo"
                            android:inputType="textPassword"
                            android:paddingStart="0dp"
                            android:paddingLeft="0dp"
                            android:paddingTop="12dp"
                            android:text="@={viewmodel.newPassword}"
                            tools:text="123456" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:hint="@string/confirm_password"
                        android:paddingStart="0dp"
                        android:paddingLeft="0dp"
                        app:layout_constraintBottom_toTopOf="@+id/button_submit"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/new_password"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/colorTextBlack">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_confirm_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionGo"
                            android:inputType="textPassword"
                            android:paddingStart="0dp"
                            android:paddingLeft="0dp"
                            android:paddingTop="12dp"
                            android:text="@={viewmodel.confirmNewPassword}"
                            tools:text="123456" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/button_submit"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="22dp"
                        android:onClick="@{() -> viewmodel.onSubmitClicked()}"
                        android:text="@string/submit"
                        android:textAllCaps="true"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/confirm_password" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>